--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -145,12 +145,13 @@ code {
     font-size: 15px;
     border: 1px solid $grey-color-light;
     border-radius: 3px;
-    background-color: #eef;
+    /*background-color: #eee;*/
 }
 
 code {
     padding: 1px 5px;
-    color: $background-color;
+    /*color: $background-color;*/
+    color: green;
 }
 
 pre {
