--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@ layout: default
     })();
     </script>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <script id="dsq-count-scr" src="//drew-dunne.disqus.com/count.js" async></script>
+    <!-- <script id="dsq-count-scr" src="//drew-dunne.disqus.com/count.js" async></script> -->
   {% endif %}
 
 </article>
