--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
     <div class="title-bottom">
       <ul>
         <li><a href="http://github.com/drewsdunne"><img src="/img/github.svg"></a></li>
-        <li><a href="http://linkedin.com/u/drewsdunne"><img src="/img/linkedin.svg"></a></li>
+        <li><a href="http://linkedin.com/in/drewsdunne"><img src="/img/linkedin.svg"></a></li>
       </ul>
     </div>
   </div>
